@@ -144,6 +144,8 @@
 #define __GROUP_STICK 1363
 #define __GROUP_SHADE 1364
 #define __GROUP_MIRROR 1365
+#define __KDE_SUPPORT 1366
+#define __CLICKS_ALWAYS_RAISE_WINDOWS 1367
 
 #define __DIRECTION_OF_DESKTOP_DRAG 400
 #define __WIDTH_OF_DRAGBAR 401
